--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "scripts": {
     "build": "parcel build index.html",
+    "publish": "parcel build index.html --public-url ./linda-font",
     "dev": "parcel index.html --open",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
